@@ -1,3 +1,10 @@
+Sat Jan 17 18:22:26 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
+
+	* unix/unix.c(convert_command_line): Reverting r1904 change
+	(Fri Mar 10 21:25:47 2006) and canonicalise using Run$Path; When
+	result of canonicalisation is non-existing, use given argv[0] as
+	input for unixify; Made	common fatal exit point.
+
 Sat Jan 17 15:53:04 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
 
 	* include/kernel.h: Add 'int' to 'unsigned'.
